# HorusTechWatch

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config.toml  run_once.bat  setup_task.vbs
src/: audit.rs  client.rs  config.rs  main.rs  state.rs
src/parse/: clock.rs  device_info.rs  diagnostics.rs  mod.rs  status.rs  wireless.rs
src/protocol/: checksum.rs  frame.rs  mod.rs
